--- a/html-page.html
+++ b/html-page.html
@@ -25,5 +25,17 @@
     <div id="mySidenav" class="sidenav">
       <a href="#">HTML Introduction</a>
     </div>
+    <h1 class="center-text">What is HTML?</h1>
+    <ul class="center-text">
+      <li>HTML stands for Hyper Text Markup Language</li>
+      <li>HTML is the standard markup language for creating Web pages</li>
+      <li>HTML describes the structure of a Web page</li>
+      <li>HTML consists of a series of elements</li>
+      <li>HTML elements tell the browser how to display the content</li>
+      <li>
+        HTML elements label pieces of content such as "this is a heading", "this
+        is a paragraph", "this is a link", etc.
+      </li>
+    </ul>
   </body>
 </html>
