Added basic explanation about CSS

--- a/css-page.html
+++ b/css-page.html
@@ -25,5 +25,18 @@
     <div id="mySidenav" class="sidenav">
       <a href="#">CSS Introduction</a>
     </div>
+    <h1 class="center-text">What is CSS?</h1>
+    <ul class="center-text">
+      <li>CSS stands for Cascading Style Sheets.</li>
+      <li>
+        CSS describes how HTML elements are to be displayed on screen, paper, or
+        in other media.
+      </li>
+      <li>
+        CSS saves a lot of work. It can control the layout of multiple web pages
+        all at once.
+      </li>
+      <li>External stylesheets are stored in CSS files</li>
+    </ul>
   </body>
 </html>
