Added basic explanation about JavaScript

--- a/js-page.html
+++ b/js-page.html
@@ -25,5 +25,11 @@
     <div id="mySidenav" class="sidenav">
       <a href="#">JavaScript Introduction</a>
     </div>
+    <h1 class="center-text">What is JavaScript?</h1>
+    <ul class="center-text">
+      <li>JavaScript is the world's most popular programming language.</li>
+      <li>JavaScript is the programming language of the Web.</li>
+      <li>JavaScript is easy to learn.</li>
+    </ul>
   </body>
 </html>
